--- a/templates/Text_and_Images/Image_Top/template.html
+++ b/templates/Text_and_Images/Image_Top/template.html
@@ -4,7 +4,7 @@
 
                 <div id="image">&nbsp;</div>
 
-                <div id="text_content">
+                <div id="text_content" class="text_content">
                     <p>This is an ideal place to put some text to introduce your learning topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
 
                 </div>
