--- a/template.css
+++ b/template.css
@@ -16,6 +16,15 @@
 	background: linear-gradient(to bottom, rgba(34,34,34,1) 0%,rgba(68,52,52,1) 100%); /* W3C */
 
 	color:#fff;
+	min-height: 480px;
+}
+
+a {
+	color:#fff;
+	text-decoration: underline;
+}
+a:hover {
+	color:#ccc;
 }
 
 #header {
@@ -67,25 +76,41 @@
 #project_navigation {
 	position: fixed;
 	top:0px;
-	background-color:rgba(0,0,0,0.8);
-	left:-350px;
-	overflow:hidden;
-	width:300px;
+	left:50px;
 	height:100%;
+	width:0px;
+	z-index: 1;
+	overflow: hidden;
+
 	-webkit-transition: 0.5s linear;
 	-moz-transition: 0.5s linear;
 	-o-transition: 0.5s linear;
 	-ms-transition: 0.5s linear;
 	transition: 0.5s linear;
-	z-index: 1;
-	padding-left:50px;
+}
+#project_navigation .scroller {
+	background-color:rgba(0,0,0,0.8);
+	position: absolute;
+	left:-350px;
+	top:0px;
+	height:100%;
+	width:300px;
 	border-right: 1px solid rgba(255, 255, 255, 0.2);
 
+	-webkit-transition: 0.5s linear;
+	-moz-transition: 0.5s linear;
+	-o-transition: 0.5s linear;
+	-ms-transition: 0.5s linear;
+	transition: 0.5s linear;
 }
 #project_navigation.open {
+	width:300px;
+}
+#project_navigation.open .scroller {
 	display:block;
 	left:0;
 }
+
 
 #project_navigation ul {
 	list-style: none outside;
@@ -97,6 +122,7 @@
 }
 #project_navigation ul a {
 	color:rgba(255,255,255,0.85);
+	text-decoration: none;
 }
 #project_navigation ul li.is_section a {
 	color:rgba(255,255,255,1);
@@ -113,37 +139,44 @@
 	padding-top: 10px;
 }
 
-h1 {
-    bottom: 18px;
-    color: #FFFFFF;
-    display: inline-block;
-    font-size: 1.4em;
-    left: -16px;
-    line-height: 1em;
+
+#h1_wrapper {
+	/* Safari etc */
+	-webkit-transform: rotate(-90deg);
+    -webkit-transform-origin: left top 0;
+	-moz-transform: rotate(-90deg);
+    -moz-transform-origin: left top 0;
+	-ms-transform: rotate(-90deg);
+    -ms-transform-origin: left top 0;
+	-o-transform: rotate(-90deg);
+    -o-transform-origin: left top 0;
+
+    transform-origin: left top 0;
+	transform: rotate(-90deg);
+	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    
+    width: 300px;
+    bottom: -13px;
+    height: 30px;
+    left: 13px;
     position: absolute;
 
-    transform: rotate(-90deg);
-
-    /* Safari */
-	-webkit-transform: rotate(-90deg);
-	/* Firefox */
-	-moz-transform: rotate(-90deg);
-	/* IE */
-	-ms-transform: rotate(-90deg);
-	/* Opera */
-	-o-transform: rotate(-90deg);
-	/* Internet Explorer */
-	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-
 }
+h1 {
+    display: inline-block;
+    font-size: 1.4em;
+    line-height: 1em;
+}
+
+
+
 #page_title {
-	padding:15px 0 5px 10px;
+	padding:15px 0 5px 20px;
 }
 #page_title h2 {
 	font-size: 1.5em;
 	padding:0;
 	margin:0;
-	color:rgba(255, 255, 255, 0.9);
 	font-weight:normal;
 }
 #page_wrapper {
@@ -152,22 +185,49 @@ h1 {
 #page_wrapper_inner {
 	position:relative;
 }
+/* text */
+
+.text_content {
+    padding: 14px 24px 6px 24px;
+}
 
 /* questionnaire styles */
 .answer {
     width:200px;
-    height:50px;
     margin-right:20px;
     margin-bottom:12px;
+	background-color: rgba(0, 0, 0, 0.75);
+	cursor: pointer;
+	padding:8px 8px 3px 5px;
 }
 
-.answer span.input {
-	display:none;
+
+
+
+.answer .input {
+	background-position: -306px 2px;
+
+    display: block;
+    float: left;
+    height: 15px;
+    width: 25px;
+
+	background-image:url(images/glyphicons-halflings-white.png);
 }
-.answer.on.active {
-  color: rgba(255, 255, 255, 0.75);
+.answer.selected .input {
+	background-position: -283px 2px;
 }
-.answer.on {
+.answer .input input {
+	position: absolute;
+	left:-5000px;
+}
+label {
+    display: block;
+    float: left;
+    font-size: 1.2em;
+}
+
+.answer.selected {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #006dcc;
@@ -184,19 +244,73 @@ h1 {
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
-.answer.on:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary.disabled,
-.btn-primary[disabled] {
-  color: #ffffff;
-  background-color: #0044cc;
-  *background-color: #003bb3;
+
+a.save_button {
+	text-decoration: none;
+    margin-right:20px;
+    margin-bottom:12px;
+    background-color: rgba(125, 15, 74, 1);
+	cursor: pointer;
+	padding:8px 9px 8px 12px;
+	font-weight:bold;
 }
-.answer.on:active {
-  background-color: #003399;
+a.save_button span, a.save_button i {
+	float:left;
 }
+
+/* modals */
+.modal {
+	border-radius: 0px;
+	color:#000;
+	border:0 none;
+	box-shadow: none;
+}
+.popup_image {
+	width:200px;
+	height: 200px;
+	float:left;
+	margin-right:10px;
+}
+.popup_text {
+	float:left;    
+	width: 300px;
+}
+.modal-body {
+	padding: 5px 15px 15px;
+}
+.modal-footer {
+	display: none;
+}
+.modal-header {
+	border:0 none;
+	padding: 9px 15px 4px;
+}
+
+
+/* hotspots */
+
+#hotspots {
+    position:relative;
+}
+.hotspot {
+    position:absolute;
+
+    left:70px;
+    top:100px;
+
+    width:140px;
+    height:140px;
+
+    background-color:rgba(255,255,255,0.3);
+
+    border-radius: 50%;
+    cursor: pointer;
+
+    text-decoration: none;
+}
+
+
+/* resources */
 
 span.resource_info {
 	color:#AAA;
@@ -221,9 +335,6 @@ html i.icon-ppt {
 }
 
 
-
-
-
 /* fixes */ 
 button#add_option_button {
 	top:25px;
@@ -232,7 +343,7 @@ button#add_option_button {
 
 .image_placeholder .aperture {
 	border-radius: 0px;
-	background-color: #666666;
-    border: 10px solid #444444;
-    color: #888888;
 }
+
+
+
