--- a/templates/Hotspot/Image_Behind/template.css
+++ b/templates/Hotspot/Image_Behind/template.css
@@ -1,66 +1,60 @@
 
 #hotspot_image {
     width:100%;
-    height:600px;
-    border-radius: 0px 0px 10px 10px;
+    height:500px;
     position: relative;
 }
 
-#overlay {
-	background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 10px 10px 10px 10px;
-    min-height: 100px;
-    left: 20px;
-    font-size: 1.1em;
-    line-height: 1.2em;
-    padding: 14px 24px 6px 24px;
+.text_box {
+    background-color: rgba(125, 15, 74, 0.75);
+    border-radius: 0px;
+    color: #fff;
+    min-height: 30px;
+    left: 3%;
+    top: 5%;
     position: absolute;
-    top: 350px;
-    width: 500px;
+    width: 50%;
 }
 
-@media (max-width: 480px) {
-    html #overlay {
-        left: 0px;
-        bottom:0px;
-        width:auto;
-        height:auto;
-        border-radius:0;
-        top:auto;
-        font-size: 1.1em;
-        line-height: 1.2em;
-    }
-    html #hotspot_image {
-        border-radius:0;
-    }
-}
-
-.hotspot {
-    position:absolute;
-
-    left:70px;
-    top:100px;
-
-    width:140px;
-    height:140px;
-
-    background-color:rgba(255,255,255,0.3);
-
-    border-radius: 50%;
-    cursor: pointer;
-
-    text-decoration: none;
-}
 #hotspot1 {
-    left:270px;
-    top:100px;
+    left:10%;
+    top:40%;
 }
 
 #hotspot2 {
-    left:450px;
-    top:50px;
+    left:40%;
+    top:50%;
 }
 
-#hotspots {
-    position:relative;
+
+
+@media (max-width: 979px) and (min-width: 768px) {
+    html .text_box {
+        max-width:500px;
+    }
+}
+@media (max-width: 979px) {
+    html .text_box {
+        left:5%;
+    }
+}
+@media (max-width: 768px) {
+    #hotspot2 {
+        left:45%;
+        top:55%;
+    }
+}
+@media (max-width: 480px) {
+    #hotspot2 {
+        left:45%;
+        top:65%;
+    }
+    html .text_box {
+        left: 0px;
+        bottom:0px;
+        width:auto;
+        margin:0px;
+        top:auto;
+        position:relative;
+    }
 }
