--- a/templates/Hotspot/Image_Behind/template.html
+++ b/templates/Hotspot/Image_Behind/template.html
@@ -68,12 +68,9 @@
                 </div>
 
             </div>
-
-            <div id="overlay" class="editable edit-resize edit-resize-relative edit-move edit-color edit-border">
-                <div id="text_content" class="editable edit-html">
+            
+            <div id="overlay" class="text_box">
+                <div id="text_content" class="text_content">
                     <p><strong>This is an ideal place</strong> to put some text to introduce your learning topic. Enter as much or as little text here as you want. </p><p>Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
-
                 </div>
             </div>
-
-            <!-- START default Text_and_Images Image_Behind -->
