--- a/templates/Hotspot/Image_Left/template.html
+++ b/templates/Hotspot/Image_Left/template.html
@@ -1,7 +1,7 @@
 
             <!-- START default Text_and_Images Image_Behind -->
 
-            <div id="hotspot_wrapper">
+            <div id="hotspot_wrapper" class="clearfix">
                     
                 <div class="add-option-template hide" data-parent="#hotspot_image">
                     <a class="hotspot" id="hotspot{id}" data-toggle="modal" href="#hotspot_modal_{id}"></a>
@@ -27,16 +27,14 @@
 
                 </div>
                 
-                <div id="hotspot_image" class="span5">
+                <div id="hotspot_image">
                     <a class="hotspot" id="hotspot1" data-toggle="modal" href="#hotspot_modal_1"></a>
                     <a class="hotspot" id="hotspot2" data-toggle="modal" href="#hotspot_modal_2"></a>
                 </div>
 
-                <div id="text_content" class="span7">
-                    <div class="text_pad">
-                        <div id="text_container">
-                            <p>This is an ideal place to put some text to introduce your learning topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
-                        </div>
+                <div id="text_wrapper">
+                    <div id="text_content" class="text_content">
+                        <p>This is an ideal place to put some text to introduce your learning topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
                     </div>
                 </div>
 
