--- a/templates/Questionnaire/Multiple_Boxes_Multiple_Choice/template.html
+++ b/templates/Questionnaire/Multiple_Boxes_Multiple_Choice/template.html
@@ -1,35 +1,32 @@
 
-            <!-- START default Text_and_Images Image_Behind -->
-            <div id="background">
-                
                 <form class="questionnaire">
 
                     <div id="image">
 
-                        <div id="text_intro" class="add-option-ignore">
-                            <div id="text_content" class="editable edit-html">
-                                <p>This questionnaire template allows you to assess how the learner is getting on.</p>
+                        <div id="overlay" class="text_box">
+                            <div id="text_content" class="text_content">
+                                <p><strong>This is an ideal place</strong> to put some text to introduce your learning topic. Enter as much or as little text here as you want. </p><p>Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
                             </div>
                         </div>
 
                         <div class="add-option-template hide">
-                            <div id="answer_{id}" class="answer text_box">
+                            <div id="answer_{id}" class="answer clearfix">
                                 <span class="input">checkbox:checkbox_{id}</span>
                                 <label for="checkbox_{id}">Answer {number}</label>
                             </div>
                         </div>
 
-                        <div id="answer_1" class="answer text_box">
+                        <div id="answer_1" class="answer clearfix">
                             <span class="input">checkbox:checkbox_1</span>
                             <label for="checkbox_1">Answer 1</label>
                         </div>
 
-                        <div id="answer_2" class="answer text_box">
+                        <div id="answer_2" class="answer clearfix">
                             <span class="input">checkbox:checkbox_2</span>
                             <label for="checkbox_2">Answer 2</label>
                         </div>
 
-                        <a id="save_button" class="save_button">Find out if you are right!</a>
+                        <a id="save_button" class="save_button clearfix"><span>Find out if you are right!</span> <i class="icon-chevron-right icon-white"></i></a>
 
                     </div>
 
@@ -82,6 +79,3 @@
                     </div>
 
                 </form>
-
-            </div>
-            <!-- START default Text_and_Images Image_Behind -->
