--- a/templates/Questionnaire/Multiple_Choice/template.css
+++ b/templates/Questionnaire/Multiple_Choice/template.css
@@ -1,52 +1,35 @@
 
 #text_wrapper {
+    float:left;
+    width:90%;
     padding-left:20px;
 }
-#text_content {
-    padding-bottom:10px;
-    padding-top:16px;
-}
 #image {
-    min-height:220px;
+    min-height:240px;
+    width:100%;
+    float:left;
 }
 #questionnaire_wrapper {
     position: relative;
 }
 .answer {
-    background-color: rgba(225, 225, 225, 0.75);
-    border-radius: 10px 10px 10px 10px;
-    color: #000;
-    padding: 5px 24px 4px;
-    min-width:100px;
-    min-height:25px;
-    margin-right: 20px;
     float:left;
 }
-.answer span.input {
-    display: block;
-    position:absolute;
-    left:12px;
+.save_button {
+    display: inline-block;
 }
-label {
-    display: block;
-    float: left;
-    font-size: 1.2em;
-    padding-left: 10px;
-    padding-top:4px;
+form {
+    margin-bottom:0;
 }
-
-@media (max-width: 979px) and (min-width: 768px) { 
-    html .span8 {   
-    	width: 676px;
+@media (max-width:370px) {
+    .answer {
+        width:auto;
     }
 }
-
-@media (max-width:768px) {
-    html .span8 {   
-    	padding-left:20px;
-    	padding-bottom:20px;
-    }
-	html #text_content {
-		padding-right:20px;
-	}
+button#add_option_button {
+    height: 30px;
+    margin-bottom: 13px;
+    position: relative;
+    right: auto;
+    top: auto;
 }
