--- a/templates/Text_and_Images/Image_Behind/template.html
+++ b/templates/Text_and_Images/Image_Behind/template.html
@@ -3,7 +3,7 @@
             <div id="background">
                 <div id="image">
                     <div id="overlay">
-                        <div id="text_content">
+                        <div id="text_content" class="text_content">
                             <p><strong>This is an ideal place</strong> to put some text to introduce your learning topic. Enter as much or as little text here as you want. </p><p>Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
 
                         </div>
