--- a/templates/Text_and_Images/Multiple_Boxes/template.css
+++ b/templates/Text_and_Images/Multiple_Boxes/template.css
@@ -13,9 +13,6 @@
     position: absolute;
     width: 50%;
 }
-.text_content {
-    padding: 14px 24px 6px 24px;
-}
 
 #overlay_1 {
     top:40%;
@@ -34,7 +31,6 @@
     position: relative;
 }
 @media (max-width: 979px) and (min-width: 768px) {
-
     html .text_box {
         max-width:500px;
     }
@@ -45,6 +41,9 @@
     }
     #overlay_2 {
         top:63%;
+    }
+    html .text_box {
+        left:5%;
     }
 }
 @media (max-width: 768px) {
@@ -67,14 +66,9 @@
         margin-bottom:20px;
         top:auto;
         position:relative;
-        margin-left:10px;
-        margin-right:10px;
     }
     html #image {
         padding-top:120px;
         padding-bottom: 20px;
-    }
-    html #image {
-        border-radius:0;
     }
 }
