--- a/templates/Video/Video/template.css
+++ b/templates/Video/Video/template.css
@@ -7,20 +7,23 @@
     width:640px;
     height:400px;
 	background-color:#000;
-    margin: 0 auto;
+    margin-left: 18px;
     color:#000;
-    border:5px solid #ccc;
+    /*border: 1px solid rgba(255, 255, 255, 0.2);*/
 }
+
 @media (max-width: 767px) { 
     html #video {
-        width:400px;
+        width:100%;
         height:280px;
+        margin-left: 0;
+        border-left: 0;
+        border-right: 0;
     }
 }
 
 @media (max-width: 480px) {
     html #video {
-        width:320px;
         height:240px;
     }
 }
@@ -29,10 +32,11 @@ div.video_player {
 }
 
 #text_content, #transcript_link {
-    padding: 20px 30px 20px 30px;
+    padding: 16px 20px 6px;
 }
 #transcript_link {
     padding-top:0;
+    padding-bottom: 18px;
 }
 #transcript_link a {
     display:inline-block;
