--- a/template.css
+++ b/template.css
@@ -17,6 +17,9 @@
 
 	color:#fff;
 	min-height: 480px;
+
+	padding-left: 0px;
+    padding-right: 0px;
 }
 
 a {
@@ -171,7 +174,7 @@ h1 {
 
 
 #page_title {
-	padding:15px 0 5px 20px;
+	padding:15px 0 14px 20px;
 }
 #page_title h2 {
 	font-size: 1.5em;
