--- a/templates/Video/Video/template.html
+++ b/templates/Video/Video/template.html
@@ -2,6 +2,10 @@
             <!-- START default Text_and_Images Image_Top -->
             <div id="background">
 
+                <div id="text_before">
+                    <p>This is an ideal place to put some text to introduce your learning topic. Enter as much or as little text here as you want. <br />Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
+                </div>
+
                 <div id="video"></div>
 
                 <div id="text_content">
