--- a/templates/Text_and_Images/Multiple_Boxes/template.html
+++ b/templates/Text_and_Images/Multiple_Boxes/template.html
@@ -5,8 +5,8 @@
                 <div id="image">
 
                     <div class="add-option-template hide">
-                        <div id="overlay_{id}" class="text_box">
-                            <div id="text_content_{id}" class="text_content">
+                        <div id="overlay_{{element.id}}" class="text_box">
+                            <div id="text_content_{{element.id}}" class="text_content">
                                 <p><strong>This is an ideal place</strong> to put some text to introduce your learning topic. Enter as much or as little text here as you want. </p><p>Simply press on the <span class="badge badge-inverse toggle"><i class="icon-edit icon-white"></i></span> icon above to edit the text.</p>
                             </div>
                         </div>
